--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-blog-cms-sanity-v3",
+  "name": "forge-journal",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -16,26 +16,28 @@
   },
   "dependencies": {
     "@sanity/client": "7.0.0",
-    "@sanity/icons": "3.7.0",
-    "@sanity/image-url": "1.1.0",
-    "@sanity/vision": "3.87.0",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.92.0",
     "@sanity/visual-editing": "2.13.20",
     "@sanity/webhook": "4.0.4",
     "@vercel/og": "0.6.8",
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
+    "dotenv": "^16.5.0",
     "groq": "3.87.0",
     "intl-segmenter-polyfill": "0.4.4",
     "next": "15.3.1",
-    "next-sanity": "9.10.6",
+    "next-sanity": "^9.12.0",
     "next-sanity-image": "6.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sanity": "3.87.0",
+    "sanity": "^3.92.0",
     "sanity-plugin-asset-source-unsplash": "3.0.3",
     "sanity-plugin-iframe-pane": "3.2.1",
-    "styled-components": "6.1.17",
-    "swr": "2.3.3"
+    "styled-components": "^6.1.19",
+    "swr": "2.3.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "4.1.5",
