--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
     "@sanity/visual-editing": "2.13.20",
     "@sanity/webhook": "4.0.4",
     "@vercel/og": "0.6.8",
+    "cheerio": "^1.1.0",
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
     "groq": "3.87.0",
+    "html-to-text": "^9.0.5",
     "intl-segmenter-polyfill": "0.4.4",
+    "mammoth": "^1.9.1",
+    "multer": "^2.0.1",
     "next": "15.3.1",
     "next-sanity": "^9.12.0",
     "next-sanity-image": "6.1.1",
+    "openai": "^5.5.0",
+    "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sanity": "^3.92.0",
