--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@sanity/client": "7.0.0",
+    "@sanity/client": "^7.1.0",
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.92.0",
@@ -33,7 +33,6 @@
     "multer": "^2.0.1",
     "next": "15.3.1",
     "next-sanity": "^9.12.0",
-    "next-sanity-image": "6.1.1",
     "openai": "^5.5.0",
     "pdf-parse": "^1.1.1",
     "react": "19.1.0",
@@ -58,12 +57,6 @@
     "prettier-plugin-tailwindcss": "0.6.11",
     "tailwindcss": "4.1.5",
     "typescript": "5.8.3"
-  },
-  "overrides": {
-    "next-sanity-image": {
-      "next": "15.3.1",
-      "react": "19.1.0"
-    }
   },
   "engines": {
     "node": ">=20"
