feat: Implement Posts Management Page with CRUD functionality
- Added a new page for managing posts with features to create, edit, delete, and filter posts.
- Integrated API endpoints for posts CRUD operations.
- Implemented authentication checks for API access.
- Added loading states and error handling for better user experience.
- Included filtering and searching capabilities for posts.
- Created a responsive layout with Tailwind CSS for the management interface.

feat: Create Authors API for CRUD operations

- Developed API endpoints for managing authors, including create, read, update, and delete functionalities.
- Implemented authentication and error handling for API requests.
- Added validation for required fields when creating or updating authors.

feat: Create Categories API for CRUD operations

- Developed API endpoints for managing categories, including create, read, update, and delete functionalities.
- Implemented authentication and error handling for API requests.
- Added validation for required fields when creating or updating categories.

feat: Create Posts API for CRUD operations

- Developed API endpoints for managing posts, including create, read, update, and delete functionalities.
- Implemented authentication and error handling for API requests.
- Added content metrics calculation (word count and reading time) during post creation and updates.

chore: Initialize database schema for content management

- Created initial database schema for authors, categories, and posts with necessary fields and relationships.
- Enabled UUID extension and row-level security for better data management.
- Added triggers for automatic timestamp updates on record modifications.
- Inserted default categories and an initial author for setup.

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,19 +1,15 @@
-# Defaults, used by ./intro-template and can be deleted if the component is removed
-NEXT_PUBLIC_VERCEL_GIT_REPO_OWNER="sanity-io"
-NEXT_PUBLIC_VERCEL_GIT_PROVIDER="github"
-NEXT_PUBLIC_VERCEL_GIT_REPO_SLUG="nextjs-blog-cms-sanity-v3"
+# Forge Journal Environment Configuration
+# This project uses Supabase for content management and OpenAI for smart import features
 
-# Required, find them on https://manage.sanity.io
-NEXT_PUBLIC_SANITY_PROJECT_ID=
-NEXT_PUBLIC_SANITY_DATASET=
-# see https://www.sanity.io/docs/api-versioning for how versioning works
-NEXT_PUBLIC_SANITY_API_VERSION="2022-11-15"
-SANITY_API_READ_TOKEN=
-# Optional, useful if you plan to add API functions that can write to your dataset
-SANITY_API_WRITE_TOKEN=
+# Required Supabase Configuration
+# Get these from your Supabase project dashboard at https://supabase.com/dashboard
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# Optional, can be used to change the Studio title in the navbar and differentiate between production and staging environments for your editors
-NEXT_PUBLIC_SANITY_PROJECT_TITLE="Forge Journal"
+# Required for Smart Import AI Features
+# Get your API key from https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key
 
-# Optional, check the comments in pages/api/revalidate.ts for instructions on how to set it up
-SANITY_REVALIDATE_SECRET=
+# Optional: Smart Import Configuration
+SMART_IMPORT_SECRET=your_import_secret_for_api_security
