--- a/package.json
+++ b/package.json
@@ -15,31 +15,21 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@sanity/client": "^7.1.0",
-    "@sanity/icons": "^3.7.0",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^3.92.0",
-    "@sanity/visual-editing": "2.13.20",
-    "@sanity/webhook": "4.0.4",
+    "@supabase/supabase-js": "^2.50.0",
     "@vercel/og": "0.6.8",
     "cheerio": "^1.1.0",
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
-    "groq": "3.87.0",
     "html-to-text": "^9.0.5",
     "intl-segmenter-polyfill": "0.4.4",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
     "next": "15.3.1",
-    "next-sanity": "^9.12.0",
     "openai": "^5.5.0",
     "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sanity": "^3.92.0",
-    "sanity-plugin-asset-source-unsplash": "3.0.3",
-    "sanity-plugin-iframe-pane": "3.2.1",
     "styled-components": "^6.1.19",
     "swr": "2.3.3",
     "uuid": "^11.1.0"
