--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/uuid": "^10.0.0",
     "@vercel/og": "0.6.8",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.0",
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
