--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@lexical/code": "^0.32.1",
+    "@lexical/html": "^0.32.1",
+    "@lexical/link": "^0.32.1",
+    "@lexical/list": "^0.32.1",
+    "@lexical/plain-text": "^0.32.1",
+    "@lexical/react": "^0.32.1",
+    "@lexical/rich-text": "^0.32.1",
+    "@lexical/table": "^0.32.1",
+    "@lexical/utils": "^0.32.1",
     "@supabase/supabase-js": "^2.50.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/uuid": "^10.0.0",
@@ -26,6 +35,7 @@
     "dotenv": "^16.5.0",
     "html-to-text": "^9.0.5",
     "intl-segmenter-polyfill": "0.4.4",
+    "lexical": "^0.32.1",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
     "next": "15.3.1",
