--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@lexical/utils": "^0.32.1",
     "@supabase/supabase-js": "^2.50.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/uuid": "^10.0.0",
     "@vercel/og": "0.6.8",
     "bcryptjs": "^3.0.2",
@@ -34,6 +35,7 @@
     "classnames": "2.5.1",
     "date-fns": "4.1.0",
     "dotenv": "^16.5.0",
+    "formidable": "^3.5.4",
     "html-to-text": "^9.0.5",
     "intl-segmenter-polyfill": "0.4.4",
     "lexical": "^0.32.1",
