feat: Add Virtuous API key validation and test endpoint for tag retrieval

--- a/.env.local.example
+++ b/.env.local.example
@@ -11,5 +11,9 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # Get your API key from https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key
 
+# Required for Virtuous CRM Integration
+# Get your API key from your Virtuous CRM dashboard
+VIRTUOUS_API_KEY=your_virtuous_api_key
+
 # Optional: Smart Import Configuration
 SMART_IMPORT_SECRET=your_import_secret_for_api_security
