feat: Add Resend API integration for email notifications; update styles and colors across components for consistency; remove unused favicon files

--- a/.env.local.example
+++ b/.env.local.example
@@ -15,5 +15,9 @@ OPENAI_API_KEY=your_openai_api_key
 # Get your API key from your Virtuous CRM dashboard
 VIRTUOUS_API_KEY=your_virtuous_api_key
 
+# Required for Email Notifications
+# Get your API key from https://resend.com/api-keys
+RESEND_API_KEY=your_resend_api_key
+
 # Optional: Smart Import Configuration
 SMART_IMPORT_SECRET=your_import_secret_for_api_security
