feat: Add image optimization scripts for local and Supabase storage
- Implemented `optimize-images.js` to optimize images in the local `public/images` directory, converting them to WebP format and providing size reduction statistics.
- Created `optimize-supabase-images.js` to download, optimize, and upload images from Supabase storage, supporting multiple folders with specific optimization presets.
- Developed `update-image-references.js` to update image references in the codebase, ensuring optimized versions are used instead of original files.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "format": "npx prettier --write . --ignore-path .gitignore --cache",
     "lint": "next lint . --ignore-path .gitignore",
     "lint:fix": "npm run format && npm run lint -- --fix",
+    "optimize-images": "node scripts/optimize-images.js",
+    "optimize-contributors": "node scripts/optimize-images.js public/images/contributors",
+    "optimize-supabase": "node scripts/optimize-supabase-images.js",
+    "optimize-supabase-posts": "node scripts/optimize-supabase-images.js posts",
+    "optimize-supabase-contributors": "node scripts/optimize-supabase-images.js contributors",
+    "update-image-refs": "node scripts/update-image-references.js",
+    "update-image-refs-dry": "node scripts/update-image-references.js --dry-run",
+    "test-optimization": "node scripts/test-optimization.js",
     "start": "next start",
     "type-check": "tsc --noEmit"
   },
@@ -62,6 +70,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-packagejson": "2.5.10",
     "prettier-plugin-tailwindcss": "0.6.11",
+    "sharp": "^0.34.3",
     "tailwindcss": "4.1.5",
     "typescript": "5.8.3"
   },
