--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "next": "15.3.1",
     "openai": "^5.5.0",
     "pdf-parse": "^1.1.1",
+    "puppeteer": "^24.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^4.7.0",
