--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lexical": "^0.32.1",
     "mammoth": "^1.9.1",
     "multer": "^2.0.1",
-    "next": "15.3.1",
+    "next": "^16.0.10",
     "openai": "^5.5.0",
     "pdf-parse": "^1.1.1",
     "puppeteer": "^24.15.0",
